Fix: Query overflow out of VW

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 :root {
   --query-height: 20vh;
-  --query-width: 80vw;
+  --query-width: 78vw;
   --query-items-width: 78vw;
   --sidebar-width: 20vw;
 }
